<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/parentPanel" android:paddingLeft="8.0dip" android:paddingTop="9.0dip" android:paddingRight="8.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/message" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:attr/textAppearanceMedium" />
    <CheckBox android:id="@id/remember_or_not" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remember_my_choice" />
    <TextView android:id="@id/tips" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/low_battery_dialog_tips" style="?android:attr/textAppearanceSmall" />
    <RelativeLayout android:id="@id/battery_info" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/battery_apps_message" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_apps_message" android:layout_alignParentLeft="true" style="?android:attr/textAppearanceSmall" />
        <TextView android:textColor="#ffeeeeee" android:id="@id/battery_apps_button" android:background="@drawable/battery_apps_button" android:paddingLeft="4.0dip" android:paddingTop="2.0dip" android:paddingRight="4.0dip" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battery_apps_button" android:layout_toRightOf="@id/battery_apps_message" android:layout_alignBaseline="@id/battery_apps_message" style="?android:attr/textAppearanceSmall" />
        <TextView android:id="@id/battery_apps" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/battery_apps_message" style="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
</LinearLayout>