<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/custom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip">
        <ListView android:id="@id/custom_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <View android:background="?listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:layout_marginRight="12.0dip" android:layout_above="@id/button" android:layout_below="@id/custom">
        <ListView android:id="@id/voice_list" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="?textAppearanceMedium" android:id="@id/empty_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ringtone_picker_sdcard_empty" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:textSize="14.0sp" android:layout_gravity="left" android:id="@id/cancel_button" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/cancel" android:maxLines="2" android:layout_weight="1.0" />
        <Button android:textSize="14.0sp" android:layout_gravity="right" android:id="@id/ok_button" android:layout_width="0.0dip" android:layout_height="48.0dip" android:text="@string/ok" android:maxLines="2" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>