<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.widget.TransportControlView android:id="@id/transport_controls"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?textAppearanceMedium" android:textSize="14.0sp" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:singleLine="true" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
            <FrameLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:layout_gravity="center" android:id="@id/btn_prev" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_previous" android:contentDescription="@string/lockscreen_transport_prev_description" />
            </FrameLayout>
            <FrameLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:layout_gravity="center" android:id="@id/btn_play" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_play" android:contentDescription="@string/lockscreen_transport_play_description" />
            </FrameLayout>
            <FrameLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <ImageView android:layout_gravity="center" android:id="@id/btn_next" android:background="?selectableItemBackground" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_media_next" android:contentDescription="@string/lockscreen_transport_next_description" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</com.android.internal.widget.TransportControlView>