<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/parentPanel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/title_template" android:background="@drawable/yi_dialog_top_baidu_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginRight="0.0dip" android:minHeight="61.0dip">
        <ImageView android:layout_gravity="center_vertical" android:id="@id/dialog_title_image" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@null" />
        <com.android.internal.widget.DialogTitle android:textSize="16.0sp" android:textColor="#ff5597d3" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dynamic_perm_popup_dialog_title" android:singleLine="true" style="?android:attr/windowTitleStyle" />
    </LinearLayout>
    <View android:id="@id/titleDivider" android:background="#ff5597d3" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" />
    <LinearLayout android:orientation="vertical" android:background="@drawable/yi_dialog_bottom_baidu_light" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/contentPanel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ScrollView android:scrollbarStyle="outsideOverlay" android:id="@id/scrollView" android:paddingLeft="14.0dip" android:paddingTop="4.0dip" android:paddingRight="10.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="ifContentScrolls">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/dialog_text" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:lineSpacingExtra="6.0dip" style="?android:attr/textAppearanceMedium" />
                    <TextView android:textSize="16.0sp" android:textColor="?textColorPrimary" android:id="@id/dialog_phone_num_text" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" />
                    <TextView android:textSize="16.0sp" android:textColor="?textColorPrimary" android:id="@id/dialog_sms_content_text" android:paddingTop="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/remember_cbx" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="10.0dip" android:text="@string/remember_info_text" />
            <TextView android:textColor="?textColorSecondary" android:id="@id/remember_tips" android:paddingLeft="38.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remember_tips_text" style="?android:attr/textAppearanceSmall" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?dividerHorizontal" android:minHeight="42.0dip">
            <LinearLayout android:orientation="horizontal" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingRight="10.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:measureWithLargestChild="true" android:showDividers="none" style="?android:attr/buttonBarStyle">
                <Button android:textSize="14.0sp" android:layout_gravity="left" android:id="@id/deny_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="4.0dip" android:text="@string/deny_btn_text" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonStyle" />
                <Button android:textSize="14.0sp" android:layout_gravity="right" android:id="@id/permit_btn" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/permit_btn_text" android:maxLines="2" android:layout_weight="1.0" style="?android:attr/buttonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>